# Cedar

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUBMISSION.md  TESTING.md  railway.json  render.yaml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: chain_state.py  config.py  cspr_click.py  decision.py  graph.py  mcp_clients.py  mcp_real.py  scheduler.py  types.py
agent/nodes/: actuate.py  guardrails.py  log.py  observe.py  reason.py  recheck.py  validate.py
api/: main.py  store.py
contracts/vault_router/: Cargo.toml  rust-toolchain.toml
contracts/vault_router/src/: lib.rs
demo-video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
demo-video/scripts/: generate_vo.mjs  vo-script.json
demo-video/src/: Root.tsx  audio-manifest.json  theme.ts  ui.tsx
frontend/: .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  docs.css  format.ts  hooks.ts  index.css  landing.css  theme.ts
scripts/: deploy_contract.sh  seed_demo.py
tests/: conftest.py  test_cross_source_price.py  test_llm_gate.py  test_mandate.py  test_mcp_real_yield.py  test_provenance.py  test_segment2_validate.py  test_segment3_reason.py  test_segment4_guardrails.py  test_segment5_e2e.py  test_segment6_api.py  test_signer_key.py
(+23 files in other folders)
