[package]
name = "vault_router"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.1.0", default-features = false }
odra-casper-livenet-env = { version = "2.1.0", optional = true }

[dev-dependencies]
odra-test = "2.1.0"

[build-dependencies]
odra-build = "2.1.0"

[features]
livenet = ["dep:odra-casper-livenet-env"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "cedar_livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
